data/derived/fa15/progs/unify/prog1166.ml.out
Characters 69-88:
  then padZero (clone 0 1)@l1 l2
       ^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list -> 'b
       but an expression was expected of type 'c list
